--- a/index.html
+++ b/index.html
@@ -9,6 +9,10 @@
 		<link rel="preconnect" href="https://fonts.bunny.net">
     <link rel="stylesheet" href="https://fonts.bunny.net/css?family=outfit:100,200,300,400,500,600,700,800,900">
 
+    <link rel="apple-touch-icon" sizes="180x180" href="180.png">
+		<link rel="icon" type="image/png" sizes="32x32" href="32.png">
+		<link rel="icon" type="image/png" sizes="16x16" href="16.png">
+
     <meta name="description" content="Transformez chaque mot caché en un défi passionnant à résoudre">
     <link rel="stylesheet" href="style.css" />
 </head>
