--- a/index.html
+++ b/index.html
@@ -15,6 +15,8 @@
 
     <meta name="description" content="Transformez chaque mot caché en un défi passionnant à résoudre">
     <link rel="stylesheet" href="style.css" />
+    <script data-goatcounter="https://redacto.goatcounter.com/count"
+        async src="//gc.zgo.at/count.js"></script>
 </head>
 <body class="bg-scaffold text-amber-50 h-screen flex flex-col px-10 pb-10 mx-auto md:px-30 lg:px-40 xl:px-60">
   <!-- En-tête -->
