--- a/index.html
+++ b/index.html
@@ -53,7 +53,7 @@
       <!-- Section de présentation -->
       <section class="flex flex-col mt-14 xl:mt-24">
           <h1 class="w-full text-5xl font-extrabold md:w-3/4">
-            <span>Chaque mot <span class="text-transparent bg-clip-text bg-gradient-to-r from-lime-500 to-lime-300">dissimulé</span> est en un <span class="text-transparent bg-clip-text bg-gradient-to-r from-lime-500 to-lime-300">défi</span> à résoudre</span>
+            <span>Chaque mot <span class="text-transparent bg-clip-text bg-gradient-to-r from-lime-500 to-lime-300">dissimulé</span> est un <span class="text-transparent bg-clip-text bg-gradient-to-r from-lime-500 to-lime-300">défi</span> à résoudre</span>
 				</span>
           </h1>
           <p class="w-full mt-6 text-xl text-gray-400 xl:w-3/4">
